<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="RocksDetailActivity"
        android:padding="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_detail_activity"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/rocks_photo_desc" />
        <TextView
            android:id="@+id/tv_name_detail_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test"
            android:textSize="30sp"
            android:layout_marginBottom="2dp"
            />
        <TextView
            android:id="@+id/tv_detail_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testt"
            android:textSize="18sp"
            />

    </LinearLayout>
</ScrollView>